# meal-planer

backend/: Cargo.toml
backend/config/: app_properties.yaml
backend/containers/: Dockerfile  start-emulators.sh
backend/experiment/: .firebaserc
backend/migrations/: 20241211155331_init.sql
backend/src/: config.rs  main.rs  startup.rs
backend/src/common/: firebase.rs  mod.rs
backend/src/common/errors/: app_error.rs  db_error.rs  mod.rs
backend/src/dishes/: authorization.rs  mod.rs  routes.rs  service.rs
backend/src/middlwares/: authorization.rs
backend/src/userdata/: mod.rs  service.rs
backend/src/userdata/domain/: diet.rs  mod.rs  user_data.rs
backend/src/userdata/http/: mod.rs  route.rs
backend/src/userdata/http/data/: user_data.rs
backend/src/userdata/repositories/: diets_repo.rs  mod.rs
backend/tests/api/: authorization.rs  common.rs  db.rs  dishes.rs  health_check.rs  main.rs  user_settings.rs
mobile/: .gitignore  analysis_options.yaml  pubspec.yaml
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  router_config.dart
mobile/lib/common/model/: summary_dish.dart
mobile/lib/common/repositories/: dishes_repo.dart  dishes_repo.g.dart  test_image.dart
mobile/lib/common/use_cases/: get_ternding_receipts_use_case.dart  get_ternding_receipts_use_case.g.dart
mobile/lib/common/widgets/: base_screen.dart
mobile/lib/home/: home_screen.dart
mobile/lib/home/widgets/: carousel.dart  carousel_dish_card.dart  meal_plan.dart
mobile/lib/profile/: profile_screen.dart
mobile/test/: widget_test.dart
