[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.9.0"}
actix-service = "2.0.2"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.40", features = ["default"] }
tracing-subscriber = "0.3.18"
config = "0.14.0"
uuid = "1.11.0"
reqwest = "0.12.8"
chrono = {version = "0.4.38", default-features = false, features = ["clock"]}
jsonwebtoken = "9.3.0"
futures-util = "0.3.31"
rs-firebase-admin-sdk = { version = "2.3.1", features = ["tokens"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "migrate", "postgres"] }
async-trait = "0.1.83"
futures = "0.3.31"

[lib]
path = "src/startup.rs"

[[bin]]
path = "src/main.rs"
name = "backend"

[dev-dependencies]
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
